--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   ],
   "main": "./lib",
   "dependencies": {
+    "utils-merge": "1.x.x"
   },
   "devDependencies": {
     "mocha": "1.x.x",
-    "chai": "1.x.x"
+    "chai": "1.x.x",
+    "chai-connect-middleware": "0.3.x"
   },
   "engines": {
     "node": "*"
